fixing emerald street overlay on small screen

--- a/src/stylus/venues-overlay-container.styl
+++ b/src/stylus/venues-overlay-container.styl
@@ -7,7 +7,7 @@
   left 20px
   position fixed
   right 20px
-  top 20px
+  top 60px
   z-index 10
   fullViewportHeight(95vh)
 
@@ -17,6 +17,7 @@
     left auto
     max-width 320px
     right 20px
+    top 20px
     transform none
 
 @media smallDesktopsAndUp
